--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node API 3 Project",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -r dotenv/config index.js"
+    "watch": "nodemon -r dotenv/config index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
